--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,37 +1,63 @@
-* {
-  background-color: blue;
+body{
+    margin:0;
 }
 
-body{
-background-color:white;
-margin:0;
+h3 {
+    text-align: center;
+    margin: 1.5em 0;
+    font-size: 1.5em;
 }
-h3{
-  text-align:center;
-}
+
 .topnav {
-  overflow: hidden;
   background-color: #333;
+  display: flex;
+  margin: 0 auto;
 }
-.search{
-  float:right;
+
+.hero {
+    width: 100vw;
 }
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 2em 0;
+}
+
+.git-command img {
+    box-shadow: 2px 2px 5px 3px rgba(10,10,10,0.4);
+}
+
+.text-container {
+    margin: 0 6em;
+}
+
 .topnav a {
-  float: left;
-  display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
+
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
-.topnav .icon {
-  display: none;
+
+.wrapper {
+    flex-grow: 5;
 }
+.topnav .icon {
+    flex-grow: -1;
+}
+
+span {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
